[project]
name = "moxie"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.135.1",
    "fastapi-cli>=0.0.24",
    "psycopg2>=2.9.11",
    "pydantic-settings>=2.13.1",
    "sentry-sdk>=2.54.0",
    "sqlalchemy>=2.0.48",
    "sqlalchemy-utils>=0.42.1",
    "strenum>=0.4.15",
    "aiomysql>=0.2.0",
    "pymysql>=1.1.0",
    "aiosqlite>=0.20.0",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "httpx>=0.28.1",
    "isort>=8.0.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-flake8>=1.3.0",
    "pytest-mock>=3.15.1",
    "pytest-pylint>=0.21.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "respx>=0.22.0",
]
